css/styles.css
/*General*/
span {
	font-family: Roboto;
}

h2 { 
	color: #F3a252;
	font-family: 'Frank Ruhl Libre';
	font-weight: 700;	
} 



/*Navbar*/
.nav-link span {
	font-family: 'Frank Ruhl Libre';
	font-weight: 700;
	font-size: 18px;
	color: white;
}

.navbar {
	background-color: #21254A;
	margin-bottom: 0.7em
}

.navbar-margin {
	margin-top: 65px
}



/*Front page carousel*/
div.carousel-item {
	max-height: 500px;
}

div.carousel-item img {
	width: 100%;
	height: 100%;
}

.carousel-caption h5 {
	font-family: 'Frank Ruhl Libre';
	font-weight: 700;
	font-size: 200%;
	color: #F3a252;
	text-shadow: 2px 2px 2px #21254A;
}

.carousel-caption span {
	font-weight: 600;
	text-shadow: 2px 2px 2px #21254A;
}

#carousel-image1 {
	width: 100%;
   height: auto;
}
 
#carousel-image2 {
	margin: 0 auto;
}



/*About us*/
.about-us {
	text-align:justify;
	align-items:center;
}



/*Forum*/
#Forum { 
	background-image: url(../images/typewriter.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	height: 350px;
	color: white;
	text-align: center;
}

.forum_text {
	background-color: rgb(159, 168, 189, 0.6);
	margin: 0px 80px; 
}

/*Coaching*/
#coaching_image {
	padding-top: 50px;
}



/*Footer*/
#Footer { 
	background-color: #21254A;
	font-family: 'Frank Ruhl Libre';
	font-weight: 700;
	font-size: 18px;
	color: white;
	padding-top:20px;
	padding-bottom: 10px;
	padding-left: 20px;
}

